[package]
name = "tcx"
version = "0.1.0"
authors = ["Vitaly Merenkov <vmrnkv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.27"
chrono = "0.4.23"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1"
thiserror = "1.0"