[package]
name = "quick_tcx"
version = "0.1.2"
authors = ["Vitaly Merenkov <vmrnkv@gmail.com>"]
edition = "2018"
description = "The rust library to interact with XML files in TCX format."
homepage = "https://github.com/vitaly-m/tcx"
repository = "https://github.com/vitaly-m/tcx"
readme = "README.md"
keywords = ["TCX", "training", "activity"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.28"
chrono = "0.4.23"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "read_benchmark"
harness = false